# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "pulsar-migrator-issue-bot"
version = "0.1.0"
publish = false
rust-version = "1.62.0"
edition = "2021"

[dependencies.clap]
version = "3.2.14"
features = ["derive"]

[dependencies.dotenvy]
version = "0.15.1"

[dependencies.octocrab]
version = "0.16.0"
features = ["rustls"]

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.ron]
version = "0.7.1"

[dependencies.serde]
version = "1.0.139"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.82"

[dependencies.tokio]
version = "1.20.0"
features = ["full"]

[profile.dev]
opt-level = 0 # none
debug-assertions = true
debug = true
incremental = true

[profile.release]
opt-level = 3 # all
debug-assertions = false
lto = true
codegen-units = 1
